# src/main/resources/openapi/backoffice-openapi.yaml
@@ -20,7 +20,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/category"
+                  $ref: "#/components/schemas/apiCategory"
     post:
       summary: create a new category
       description: create a new **category**
@@ -31,7 +31,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/category"
+              $ref: "#/components/schemas/apiCategory"
       responses:
         201:
           description: Success
@@ -40,7 +40,7 @@ paths:
     parameters:
       - name: categoryId
         schema:
-          type: string
+           $ref: "#/components/schemas/id"
         in: path
         required: true
     put:
@@ -53,7 +53,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/category"
+              $ref: "#/components/schemas/apiCategory"
       responses:
         200:
           description: Entity successfully updated
@@ -78,7 +78,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/category"
+                $ref: "#/components/schemas/apiCategory"
   /articles:
     get:
       summary: get list of articles
@@ -94,18 +94,25 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/article"
+                  $ref: "#/components/schemas/apiArticle"
     post:
       summary: create a new article
       description: create a new **article**
       operationId: createArticle
       tags:
         - Articles
+      parameters:
+        - name: x-category-id
+          in: header
+          required: true
+          schema:
+            type: integer
+            format: int64
       requestBody:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/article"
+              $ref: "#/components/schemas/apiArticle"
       responses:
         201:
           $ref: "#/components/responses/201"
@@ -113,7 +120,7 @@ paths:
     parameters:
       - name: articleId
         schema:
-          type: string
+          $ref: "#/components/schemas/id"
         in: path
         required: true
     put:
@@ -126,7 +133,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/article"
+              $ref: "#/components/schemas/apiArticle"
       responses:
         200:
           description: Entity successfully updated
@@ -151,7 +158,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/article"
+                $ref: "#/components/schemas/apiArticle"
   /tables:
     get:
       operationId: getTables
@@ -182,7 +189,7 @@ paths:
     parameters:
       - name: tableId
         schema:
-          type: string
+           $ref: "#/components/schemas/id"
         in: path
         required: true
     put:
@@ -217,16 +224,30 @@ paths:
                 $ref: "#/components/schemas/apiTable"
 components:
   schemas:
-    category:
+    apiCategory:
       type: object
+      required:
+        - name
+        - description
       properties:
+        id:
+          type: integer
+          format: int64
         name:
           type: string
         description:
           type: string
-    article:
+    apiArticle:
       type: object
+      required:
+        - name
+        - price
+        - picture
+        - description
       properties:
+        id:
+          type: integer
+          format: int64
         name:
           type: string
         price:
@@ -237,13 +258,23 @@ components:
           type: string
     apiTable:
       type: object
+      required:
+        - name
+        - seatCount
+        - active
       properties:
+        id:
+          type: integer
+          format: int64
         name:
           type: string
         seatCount:
           type: integer
         active:
           type: boolean
+    id:
+      type: integer
+      format: int64
   responses:
     201:
       description: Entity successfully created
